--- a/_posts/2020-05-03-HoF-ML.md
+++ b/_posts/2020-05-03-HoF-ML.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "Baseball Batting Hall of Fame Perdictor"
+title:  "Baseball Batting Hall of Fame Predictor"
 excerpt: "Machine Learning model trained on offensive statistics in order to predict upcoming Hall of Fame players"
 date:   2020-05-03
 categories: projects
