Updated Conferences and Pubs

--- a/_posts/2022-02-11-defense.md
+++ b/_posts/2022-02-11-defense.md
@@ -1,9 +1,9 @@
 ---
 layout: single
-title:  "Sucessfully Defended my PhD"
+title:  "Sucessfully Defended my PhD!"
 excerpt: "Evaluating and Improving the Viability of Machine Learning to Solve Chemical Problems"
 date:   2022-02-11
-categories: publications
+categories: research
 author_profile: true
 header:
     teaser: /assets/images/defense.jpeg
@@ -14,3 +14,5 @@ header:
 </div>
 
 ------
+
+After many years in the University of Pittsburgh Chemistry department, I have successfully defended my PhD work. It's absolutely mind-boggling to consider that when I began this program, I had absolutely no prior knowledge of coding. Now, as I reach its conclusion, I can proudly say that I've acquired the skills to code machine learning models proficiently. Moreover, I actively contributed to the group by working on the genetic algorithm code, developing a Python package for molecular representations, and helping work on the development of a conformer sampling method. It's been an incredible journey of growth and learning.
