--- a/_posts/2022-10-25-qtdg.md
+++ b/_posts/2022-10-25-qtdg.md
@@ -14,3 +14,5 @@ header:
 </div>
 
 ------
+
+My latest paper on crystal structure torsions vs gas-phase computed torsions is on [ChemRxiv](https://doi.org/10.26434/chemrxiv-2022-h9gjq). Torsional angles derived from experimental crystallographic data often is used in conformer sampling methods but the data derived from these torsional preferences is limited to molecules that must be stable, synthetically accessible, and able to be crystallized, omitting a large part of accessible chemical space. We looked to remedy this by performing an exhaustive torsion sampling on over 3 million synthetically accessible compounds with the semi-empirical GFN2 method and compared the torsional preference of these gas-phase conformers with experimental crystallographic data in the ETKDG conformer sampling method. We propose a quantum-based sampling method alternative, QTDG, that does not rely on experimental data collection.
