--- a/_posts/2022-03-01-postdoc.md
+++ b/_posts/2022-03-01-postdoc.md
@@ -3,6 +3,8 @@ layout: single
 title:  "Starting Postdoc!"
 excerpt: "Postdoc in the Koes Group"
 date:   2022-02-11
-categories: publications
+categories: research
 author_profile: true
 ---
+
+I am starting a new chapter in my career by doing a postdoc in the Koes group. I will be taking a side step from the materials discovery process and working on drug discovery. My focus will be on analyzing protein systems and their conformational landscapes to try and create pharmacophores for virtual screening. 
