Add Universal DH, Certificates page, Clean Up layours

--- a/_posts/2020-05-03-HoF-ML.md
+++ b/_posts/2020-05-03-HoF-ML.md
@@ -5,6 +5,7 @@ excerpt: "Machine Learning model trained on offensive statistics in order to pre
 date:   2020-05-03
 categories: projects
 author_profile: true
+classes: wide
 ---
 
 With the start of May and unfortunately no baseball, I decided to try and pass the time by seeing how well an ML model could predict who is going to enter the Hall of Fame.  
