--- a/_posts/2020-11-10-ml-bench.md
+++ b/_posts/2020-11-10-ml-bench.md
@@ -5,6 +5,7 @@ excerpt: "Machine Learning Evaluation preprint now on ChemRxiv"
 date:   2020-11-10
 categories: publications
 author_profile: true
+classes: wide
 header:
     teaser: /assets/images/CNN-ToC.png
 ---
