--- a/_posts/2022-02-11-defense.md
+++ b/_posts/2022-02-11-defense.md
@@ -5,6 +5,7 @@ excerpt: "Evaluating and Improving the Viability of Machine Learning to Solve Ch
 date:   2022-02-11
 categories: research
 author_profile: true
+classes: wide
 header:
     teaser: /assets/images/defense.jpeg
 ---
