--- a/_posts/2022-10-25-qtdg.md
+++ b/_posts/2022-10-25-qtdg.md
@@ -5,6 +5,7 @@ excerpt: "Quantum Torsion Preference paper now on ChemRxiv"
 date:   2022-10-25
 categories: publications
 author_profile: true
+classes: wide
 header:
     teaser: /assets/images/qtdg-toc.png
 ---
